--- a/7.font/webfonts/font.css
+++ b/7.font/webfonts/font.css
@@ -2,16 +2,14 @@
     font-family: 'Solide Mirage_Etroit';
     src:    url('Etroit/Solide_Mirage-Etroit_web.eot');
     src:    url('Etroit/Solide_Mirage-Etroit_web.eot?#iefix') format('embedded-opentype'),
-            url('Etroit/Solide_Mirage-Etroit_web.woff2') format('woff2'),
-			;
+            url('Etroit/Solide_Mirage-Etroit_web.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Solide Mirage';
-    src:    url('Mono/Solide_Mirage-Mono_web.woff2') format('woff2'),
-			;
+    src:    url('Mono/Solide_Mirage-Mono_web.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
